# dlo

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  dlo_doxygen.h  makefile  mfc.conf
src/: CMakeLists.txt  makefile  output.cpp  output.hpp  test.cpp
src/dlo/: CMakeLists.txt  configuration.cpp  configuration.hpp  i18n.cpp  i18n.hpp  output.cpp  output.hpp  output.tcc  signalhandling.cpp  signalhandling.hpp  stringutils.cpp  stringutils.hpp  stringutils.tcc
src/testsuite/: CMakeLists.txt  conf_test.cpp  conf_test.hpp  i18n_test.cpp  main.cpp  output_test.cpp  output_test.hpp  sig_test.cpp  sig_test.hpp  string_test.cpp  string_test.hpp  test.cpp  tests_main.cpp  tests_stringutils.cpp
